Fix small issues

--- a/people.html
+++ b/people.html
@@ -20,7 +20,7 @@ members:
     avatar: images/hackers/alfonso.jpg
     socials:
       - icon_class: fa fa-twitter
-        url: https://twitter.com/alfonsogarciacaro
+        url: https://twitter.com/alfonsogcnunez
       - icon_class: fa fa-github
         url: http://github.com/alfonsogarciacaro
       - icon_class: fa fa-rss
