--- a/projects/suave.html
+++ b/projects/suave.html
@@ -5,7 +5,7 @@ images:
 title: Suave
 description: "Suave is a lightweight, non-blocking web server. The non-blocking I/O model is efficient and suitable for building fast, scalable network applications. In fact, Suave is written in a completely non-blocking fashion throughout. Suave runs on Linux, OS X and Windows flawlessly."
 website: http://suave.io
-author: "Henrik Feldt"
+author: "Henrik Feldt, Ademar Gonzalez"
 license: MIT
 prev: forge
 next: fslab
